# cutebacktests

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: profile-catalog.md  realism.md  walk-forward.md
examples/: historical_options_feed_demo.py  run_intraday_options_backtest.py  run_intraday_stock_backtest.py  run_opening_range_profile.py  walk_forward_profile_eval.py
src/cutebacktests/: __init__.py  cli.py  historical_options_feed.py  market_data_cache.py  models.py  premarket_context.py  settings.py  storage.py  utils.py
src/cutebacktests/backtest/: __init__.py  intraday_contracts.py  intraday_market.py  intraday_options.py  intraday_pricing.py  pricing.py  robust.py
src/cutebacktests/profiles/: __init__.py  opening_range_profiles.py  opening_range_profiles_core.py  opening_range_profiles_family_carver.py  opening_range_profiles_family_option_structure.py  opening_range_profiles_registry.py
src/cutebacktests/providers/: __init__.py  alpaca.py  cutemarkets.py  cutemarkets_paper.py
src/cutebacktests/research/: __init__.py  market_data_runtime.py  options_tradability_sampler.py
src/cutebacktests/strategies/: __init__.py  daily_forecasts.py  intraday.py  lfcm.py  mean_reversion_intraday.py  preopen_selector.py  regime.py  surface_overlays.py
tests/: test_public_surface.py
