[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutebacktests"
version = "0.2.0"
description = "Backtesting runtime for historical and intraday options strategies with DuckDB, market-data adapters, and opening-range profiles."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "CuteMarkets" }]
keywords = [
  "backtesting",
  "options-backtesting",
  "intraday-trading",
  "duckdb",
  "quant-research",
  "options-data",
  "walk-forward",
]
dependencies = [
  "alpaca-py>=0.38.0",
  "duckdb>=1.1.0",
  "numpy>=1.26.0",
  "polars>=1.8.0",
  "requests>=2.31.0",
  "scikit-learn>=1.5.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
  "Topic :: Scientific/Engineering",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.3.0",
  "twine>=5.1.1",
]

[project.urls]
Homepage = "https://cutemarkets.com/docs/cutebacktests"
Documentation = "https://cutemarkets.com/docs/cutebacktests"
Repository = "https://github.com/cutemarkets/cutebacktests"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
